CRUD APIs added for Posts and Comments

--- a/src/utils/intl/locales/en.json
+++ b/src/utils/intl/locales/en.json
@@ -3,12 +3,23 @@
 	"EMAIL_ALREADY_EXIST": "Email or Username already exists",
 	"INTERNAL_SERVER_ERROR": "Internal Server Error",
 	"ACCOUNT_CREATED_SUCCESSFULLY": "Account Created Sucessfully. Please Login",
-    "USER_NOT_FOUND":"User Not Found",
-    "INVALID_CREDENTIAL":"Invalid Credentials",
-    "LOGIN_SUCCESSFULLY":"Login Successfully",
-    "FILE_REQUIRED":"File is required",
-    "PROFILE_UPLOAD_FAILED":"Failed to upload profile",
-    "PROFILE_UPDATED_SUCCESSFULLY":"Profile updated successfully",
-    "INVALID_PROFILE_VISIBILITY":"Invalid profile visibility value",
-    "UPDATE_USER_FAILED":"User update failed"
+	"USER_NOT_FOUND": "User Not Found",
+	"INVALID_CREDENTIAL": "Invalid Credentials",
+	"LOGIN_SUCCESSFULLY": "Login Successfully",
+	"FILE_REQUIRED": "File is required",
+	"PROFILE_UPLOAD_FAILED": "Failed to upload profile",
+	"PROFILE_UPDATED_SUCCESSFULLY": "Profile updated successfully",
+	"INVALID_PROFILE_VISIBILITY": "Invalid profile visibility value",
+	"UPDATE_USER_FAILED": "User update failed",
+	"POST_CREATED_SUCCESSFULLY": "Post Created Successfully",
+	"POST_RETRIVED_SUCCESSFULLY": "Post Retrived Successfully",
+	"POST_NOT_FOUND": "Post Not Found",
+	"POST_UPDATED_SUCCESSFULLY": "Post Updated Successfully",
+	"POST_DELETE_SUCCESSFULLY": "Post Deleted Successfully",
+	"FORBIDDEN_ACCESS": "User Don't have Access to update post",
+	"COMMENTS_FETCHED_SUCCESSFULLY": "Comments fetched Successfully",
+	"COMMENT_UPDATED_SUCCESSFULLY": "Comment updated successfully",
+	"COMMENT_ADDED_SUCCESSFULLY": "Comment Added Successfully",
+	"COMMENT_DELETED_SUCCESSFULLY": "Comment Deleted Successfully",
+	"COMMENT_NOT_FOUND": "Comment Not Found"
 }
