Added caching and optimize code

--- a/src/utils/intl/locales/en.json
+++ b/src/utils/intl/locales/en.json
@@ -22,7 +22,16 @@
 	"COMMENT_ADDED_SUCCESSFULLY": "Comment Added Successfully",
 	"COMMENT_DELETED_SUCCESSFULLY": "Comment Deleted Successfully",
 	"COMMENT_NOT_FOUND": "Comment Not Found",
-	"FRIEND_REQUEST_ALREADY_EXISTS":"They are already friends :)",
-	"FRIEND_REQUEST_SENT_SUCCESSFULLY":"Friend Request has been sent successfully",
-	"FRIENDS_FETCHED_SUCCESSFULLY":"Friends Fetched Successfully"
+	"FRIEND_REQUEST_ALREADY_EXISTS": "They are already friends :)",
+	"FRIEND_REQUEST_SENT_SUCCESSFULLY": "Friend Request has been sent successfully",
+	"FRIENDS_FETCHED_SUCCESSFULLY": "Friends Fetched Successfully",
+	"POST_LIKED_SUCCESSFULLY": "POST_LIKED_SUCCESSFULLY",
+	"COMMENT_LIKED_SUCCESSFULLY": "COMMENT_LIKED_SUCCESSFULLY",
+	"USER_TAGGED_SUCCESSFULLY": "USER_TAGGED_SUCCESSFULLY",
+	"INVALID_POST_ID": "INVALID_POST_ID",
+	"OWNER_NOT_FOUND": "OWNER_NOT_FOUND",
+	"POST_RETRIEVED_SUCCESSFULLY": "POST_RETRIEVED_SUCCESSFULLY",
+	"USER_PROFILE_FETCHED_SUCCESSFULLY": "USER_PROFILE_FETCHED_SUCCESSFULLY",
+	"FRIEND_REQUEST_NOT_FOUND": "FRIEND_REQUEST_NOT_FOUND",
+	"FRIEND_REQUEST_ACCEPTED_SUCCESSFULLY": "FRIEND_REQUEST_ACCEPTED_SUCCESSFULLY"
 }
