added constants and media content

--- a/src/utils/intl/locales/en.json
+++ b/src/utils/intl/locales/en.json
@@ -1,37 +1,36 @@
 {
-	"MISSING_REQUIRED_FIELDS": "All Fields Required",
-	"EMAIL_ALREADY_EXIST": "Email or Username already exists",
-	"INTERNAL_SERVER_ERROR": "Internal Server Error",
-	"ACCOUNT_CREATED_SUCCESSFULLY": "Account Created Sucessfully. Please Login",
-	"USER_NOT_FOUND": "User Not Found",
-	"INVALID_CREDENTIAL": "Invalid Credentials",
-	"LOGIN_SUCCESSFULLY": "Login Successfully",
-	"FILE_REQUIRED": "File is required",
-	"PROFILE_UPLOAD_FAILED": "Failed to upload profile",
-	"PROFILE_UPDATED_SUCCESSFULLY": "Profile updated successfully",
-	"INVALID_PROFILE_VISIBILITY": "Invalid profile visibility value",
-	"UPDATE_USER_FAILED": "User update failed",
-	"POST_CREATED_SUCCESSFULLY": "Post Created Successfully",
-	"POST_RETRIVED_SUCCESSFULLY": "Post Retrived Successfully",
-	"POST_NOT_FOUND": "Post Not Found",
-	"POST_UPDATED_SUCCESSFULLY": "Post Updated Successfully",
-	"POST_DELETE_SUCCESSFULLY": "Post Deleted Successfully",
-	"FORBIDDEN_ACCESS": "User Don't have Access to update post",
-	"COMMENTS_FETCHED_SUCCESSFULLY": "Comments fetched Successfully",
-	"COMMENT_UPDATED_SUCCESSFULLY": "Comment updated successfully",
-	"COMMENT_ADDED_SUCCESSFULLY": "Comment Added Successfully",
-	"COMMENT_DELETED_SUCCESSFULLY": "Comment Deleted Successfully",
-	"COMMENT_NOT_FOUND": "Comment Not Found",
-	"FRIEND_REQUEST_ALREADY_EXISTS": "They are already friends :)",
-	"FRIEND_REQUEST_SENT_SUCCESSFULLY": "Friend Request has been sent successfully",
-	"FRIENDS_FETCHED_SUCCESSFULLY": "Friends Fetched Successfully",
-	"POST_LIKED_SUCCESSFULLY": "POST_LIKED_SUCCESSFULLY",
-	"COMMENT_LIKED_SUCCESSFULLY": "COMMENT_LIKED_SUCCESSFULLY",
-	"USER_TAGGED_SUCCESSFULLY": "USER_TAGGED_SUCCESSFULLY",
-	"INVALID_POST_ID": "INVALID_POST_ID",
-	"OWNER_NOT_FOUND": "OWNER_NOT_FOUND",
-	"POST_RETRIEVED_SUCCESSFULLY": "POST_RETRIEVED_SUCCESSFULLY",
-	"USER_PROFILE_FETCHED_SUCCESSFULLY": "USER_PROFILE_FETCHED_SUCCESSFULLY",
-	"FRIEND_REQUEST_NOT_FOUND": "FRIEND_REQUEST_NOT_FOUND",
-	"FRIEND_REQUEST_ACCEPTED_SUCCESSFULLY": "FRIEND_REQUEST_ACCEPTED_SUCCESSFULLY"
+	"MISSING_REQUIRED_FIELDS": "All fields are required.",
+	"EMAIL_ALREADY_EXIST": "Email or username already exists.",
+	"INTERNAL_SERVER_ERROR": "Internal server error.",
+	"ACCOUNT_CREATED_SUCCESSFULLY": "Account created successfully. Please log in.",
+	"USER_NOT_FOUND": "User not found.",
+	"INVALID_CREDENTIAL": "Invalid credentials.",
+	"LOGIN_SUCCESSFULLY": "Logged in successfully.",
+	"FILE_REQUIRED": "File is required.",
+	"PROFILE_UPLOAD_FAILED": "Failed to upload profile image.",
+	"PROFILE_UPDATED_SUCCESSFULLY": "Profile updated successfully.",
+	"INVALID_PROFILE_VISIBILITY": "Invalid profile visibility value.",
+	"UPDATE_USER_FAILED": "User update failed.",
+	"POST_CREATED_SUCCESSFULLY": "Post created successfully.",
+	"POST_RETRIEVED_SUCCESSFULLY": "Post retrieved successfully.",
+	"POST_NOT_FOUND": "Post not found.",
+	"POST_UPDATED_SUCCESSFULLY": "Post updated successfully.",
+	"POST_DELETED_SUCCESSFULLY": "Post deleted successfully.",
+	"FORBIDDEN_ACCESS": "You do not have access to update this post.",
+	"COMMENTS_FETCHED_SUCCESSFULLY": "Comments fetched successfully.",
+	"COMMENT_UPDATED_SUCCESSFULLY": "Comment updated successfully.",
+	"COMMENT_ADDED_SUCCESSFULLY": "Comment added successfully.",
+	"COMMENT_DELETED_SUCCESSFULLY": "Comment deleted successfully.",
+	"COMMENT_NOT_FOUND": "Comment not found.",
+	"FRIEND_REQUEST_ALREADY_EXISTS": "You are already friends.",
+	"FRIEND_REQUEST_SENT_SUCCESSFULLY": "Friend request sent successfully.",
+	"FRIENDS_FETCHED_SUCCESSFULLY": "Friends fetched successfully.",
+	"POST_LIKED_SUCCESSFULLY": "Post liked successfully.",
+	"COMMENT_LIKED_SUCCESSFULLY": "Comment liked successfully.",
+	"USER_TAGGED_SUCCESSFULLY": "User tagged successfully.",
+	"INVALID_POST_ID": "Invalid post ID.",
+	"OWNER_NOT_FOUND": "Owner not found.",
+	"USER_PROFILE_FETCHED_SUCCESSFULLY": "User profile fetched successfully.",
+	"FRIEND_REQUEST_NOT_FOUND": "Friend request not found.",
+	"FRIEND_REQUEST_ACCEPTED_SUCCESSFULLY": "Friend request accepted successfully."
 }
