chat room , private message using socket.io and notification features added

--- a/src/utils/intl/locales/en.json
+++ b/src/utils/intl/locales/en.json
@@ -32,5 +32,8 @@
 	"OWNER_NOT_FOUND": "Owner not found.",
 	"USER_PROFILE_FETCHED_SUCCESSFULLY": "User profile fetched successfully.",
 	"FRIEND_REQUEST_NOT_FOUND": "Friend request not found.",
-	"FRIEND_REQUEST_ACCEPTED_SUCCESSFULLY": "Friend request accepted successfully."
+	"FRIEND_REQUEST_ACCEPTED_SUCCESSFULLY": "Friend request accepted successfully.",
+	"CHAT_ROOM_CREATED_SUCCESSFULLY": "CHAT_ROOM_CREATED_SUCCESSFULLY",
+	"MESSAGE_SENT_SUCCESSFULLY": "MESSAGE_SENT_SUCCESSFULLY",
+	"MESSAGES_RETRIEVED_SUCCESSFULLY": "MESSAGES_RETRIEVED_SUCCESSFULLY"
 }
