settings API added

--- a/src/utils/intl/locales/en.json
+++ b/src/utils/intl/locales/en.json
@@ -35,5 +35,8 @@
 	"FRIEND_REQUEST_ACCEPTED_SUCCESSFULLY": "Friend request accepted successfully.",
 	"CHAT_ROOM_CREATED_SUCCESSFULLY": "CHAT_ROOM_CREATED_SUCCESSFULLY",
 	"MESSAGE_SENT_SUCCESSFULLY": "MESSAGE_SENT_SUCCESSFULLY",
-	"MESSAGES_RETRIEVED_SUCCESSFULLY": "MESSAGES_RETRIEVED_SUCCESSFULLY"
+	"MESSAGES_RETRIEVED_SUCCESSFULLY": "MESSAGES_RETRIEVED_SUCCESSFULLY",
+	"CONTENT_UPLOAD_FAILED": "CONTENT_UPLOAD_FAILED",
+	"POST_RETRIVED_SUCCESSFULLY": "POST_RETRIVED_SUCCESSFULLY",
+	"NOTIFICATION_SETTING_UPDATED": "NOTIFICATION_SETTING_UPDATED"
 }
