Added logger , changes in chat app and other changes

--- a/src/utils/intl/locales/en.json
+++ b/src/utils/intl/locales/en.json
@@ -1,42 +1,41 @@
 {
-	"MISSING_REQUIRED_FIELDS": "All fields are required.",
-	"EMAIL_ALREADY_EXIST": "Email or username already exists.",
-	"INTERNAL_SERVER_ERROR": "Internal server error.",
-	"ACCOUNT_CREATED_SUCCESSFULLY": "Account created successfully. Please log in.",
-	"USER_NOT_FOUND": "User not found.",
-	"INVALID_CREDENTIAL": "Invalid credentials.",
-	"LOGIN_SUCCESSFULLY": "Logged in successfully.",
-	"FILE_REQUIRED": "File is required.",
-	"PROFILE_UPLOAD_FAILED": "Failed to upload profile image.",
-	"PROFILE_UPDATED_SUCCESSFULLY": "Profile updated successfully.",
-	"INVALID_PROFILE_VISIBILITY": "Invalid profile visibility value.",
-	"UPDATE_USER_FAILED": "User update failed.",
-	"POST_CREATED_SUCCESSFULLY": "Post created successfully.",
+	"MISSING_REQUIRED_FIELDS": "Please provide all required fields.",
+	"EMAIL_ALREADY_EXIST": "An account with this email or username already exists.",
+	"INTERNAL_SERVER_ERROR": "An unexpected error occurred. Please try again later.",
+	"ACCOUNT_CREATED_SUCCESSFULLY": "Your account has been created successfully. Please log in.",
+	"USER_NOT_FOUND": "No user found with the provided information.",
+	"INVALID_CREDENTIAL": "The credentials you provided are incorrect.",
+	"LOGIN_SUCCESSFULLY": "You have logged in successfully.",
+	"FILE_REQUIRED": "A file is required for this operation.",
+	"PROFILE_UPLOAD_FAILED": "Failed to upload profile image. Please try again.",
+	"PROFILE_UPDATED_SUCCESSFULLY": "Your profile has been updated successfully.",
+	"INVALID_PROFILE_VISIBILITY": "The profile visibility value is not valid.",
+	"UPDATE_USER_FAILED": "Failed to update user profile. Please try again.",
+	"POST_CREATED_SUCCESSFULLY": "Your post has been created successfully.",
 	"POST_RETRIEVED_SUCCESSFULLY": "Post retrieved successfully.",
 	"POST_NOT_FOUND": "Post not found.",
-	"POST_UPDATED_SUCCESSFULLY": "Post updated successfully.",
-	"POST_DELETED_SUCCESSFULLY": "Post deleted successfully.",
-	"FORBIDDEN_ACCESS": "You do not have access to update this post.",
-	"COMMENTS_FETCHED_SUCCESSFULLY": "Comments fetched successfully.",
-	"COMMENT_UPDATED_SUCCESSFULLY": "Comment updated successfully.",
-	"COMMENT_ADDED_SUCCESSFULLY": "Comment added successfully.",
-	"COMMENT_DELETED_SUCCESSFULLY": "Comment deleted successfully.",
+	"POST_UPDATED_SUCCESSFULLY": "Your post has been updated successfully.",
+	"POST_DELETED_SUCCESSFULLY": "Your post has been deleted successfully.",
+	"FORBIDDEN_ACCESS": "You do not have permission to access or modify this post.",
+	"COMMENTS_FETCHED_SUCCESSFULLY": "Comments have been retrieved successfully.",
+	"COMMENT_UPDATED_SUCCESSFULLY": "Your comment has been updated successfully.",
+	"COMMENT_ADDED_SUCCESSFULLY": "Your comment has been added successfully.",
+	"COMMENT_DELETED_SUCCESSFULLY": "Your comment has been deleted successfully.",
 	"COMMENT_NOT_FOUND": "Comment not found.",
-	"FRIEND_REQUEST_ALREADY_EXISTS": "You are already friends.",
+	"FRIEND_REQUEST_ALREADY_EXISTS": "You are already friends with this user.",
 	"FRIEND_REQUEST_SENT_SUCCESSFULLY": "Friend request sent successfully.",
-	"FRIENDS_FETCHED_SUCCESSFULLY": "Friends fetched successfully.",
-	"POST_LIKED_SUCCESSFULLY": "Post liked successfully.",
-	"COMMENT_LIKED_SUCCESSFULLY": "Comment liked successfully.",
-	"USER_TAGGED_SUCCESSFULLY": "User tagged successfully.",
-	"INVALID_POST_ID": "Invalid post ID.",
-	"OWNER_NOT_FOUND": "Owner not found.",
-	"USER_PROFILE_FETCHED_SUCCESSFULLY": "User profile fetched successfully.",
+	"FRIENDS_FETCHED_SUCCESSFULLY": "Friends list retrieved successfully.",
+	"POST_LIKED_SUCCESSFULLY": "You liked the post successfully.",
+	"COMMENT_LIKED_SUCCESSFULLY": "You liked the comment successfully.",
+	"USER_TAGGED_SUCCESSFULLY": "User has been tagged successfully.",
+	"INVALID_POST_ID": "The post ID provided is invalid.",
+	"OWNER_NOT_FOUND": "The owner of the post was not found.",
+	"USER_PROFILE_FETCHED_SUCCESSFULLY": "User profile retrieved successfully.",
 	"FRIEND_REQUEST_NOT_FOUND": "Friend request not found.",
-	"FRIEND_REQUEST_ACCEPTED_SUCCESSFULLY": "Friend request accepted successfully.",
-	"CHAT_ROOM_CREATED_SUCCESSFULLY": "CHAT_ROOM_CREATED_SUCCESSFULLY",
-	"MESSAGE_SENT_SUCCESSFULLY": "MESSAGE_SENT_SUCCESSFULLY",
-	"MESSAGES_RETRIEVED_SUCCESSFULLY": "MESSAGES_RETRIEVED_SUCCESSFULLY",
-	"CONTENT_UPLOAD_FAILED": "CONTENT_UPLOAD_FAILED",
-	"POST_RETRIVED_SUCCESSFULLY": "POST_RETRIVED_SUCCESSFULLY",
-	"NOTIFICATION_SETTING_UPDATED": "NOTIFICATION_SETTING_UPDATED"
+	"FRIEND_REQUEST_ACCEPTED_SUCCESSFULLY": "Friend request has been accepted successfully.",
+	"CHAT_ROOM_CREATED_SUCCESSFULLY": "Chat room created successfully.",
+	"MESSAGE_SENT_SUCCESSFULLY": "Your message has been sent successfully.",
+	"MESSAGES_RETRIEVED_SUCCESSFULLY": "Messages have been retrieved successfully.",
+	"CONTENT_UPLOAD_FAILED": "Failed to upload content. Please try again.",
+	"NOTIFICATION_SETTING_UPDATED": "Notification settings updated successfully."
 }
