--- a/src/utils/intl/locales/es.json
+++ b/src/utils/intl/locales/es.json
@@ -1,6 +1,41 @@
 {
-    "MISSING_REQUIRED_FIELDS": "Todos los campos son obligatorios",
-    "EMAIL_ALREADY_EXIST": "El correo electrónico o nombre de usuario ya existe",
-    "ACCOUNT_CREATED_PLEASE_LOGIN": "¡Cuenta creada con éxito, por favor inicie sesión!",
-    "INTERNAL_SERVER_ERROR": "Error interno del servidor"
+	"MISSING_REQUIRED_FIELDS": "Por favor, proporcione todos los campos requeridos.",
+	"EMAIL_ALREADY_EXIST": "Ya existe una cuenta con este correo electrónico o nombre de usuario.",
+	"INTERNAL_SERVER_ERROR": "Ocurrió un error inesperado. Por favor, inténtelo de nuevo más tarde.",
+	"ACCOUNT_CREATED_SUCCESSFULLY": "Su cuenta ha sido creada con éxito. Por favor, inicie sesión.",
+	"USER_NOT_FOUND": "No se encontró ningún usuario con la información proporcionada.",
+	"INVALID_CREDENTIAL": "Las credenciales proporcionadas son incorrectas.",
+	"LOGIN_SUCCESSFULLY": "Ha iniciado sesión con éxito.",
+	"FILE_REQUIRED": "Se requiere un archivo para esta operación.",
+	"PROFILE_UPLOAD_FAILED": "No se pudo cargar la imagen de perfil. Por favor, inténtelo de nuevo.",
+	"PROFILE_UPDATED_SUCCESSFULLY": "Su perfil ha sido actualizado con éxito.",
+	"INVALID_PROFILE_VISIBILITY": "El valor de visibilidad del perfil no es válido.",
+	"UPDATE_USER_FAILED": "No se pudo actualizar el perfil del usuario. Por favor, inténtelo de nuevo.",
+	"POST_CREATED_SUCCESSFULLY": "Su publicación ha sido creada con éxito.",
+	"POST_RETRIEVED_SUCCESSFULLY": "Publicación recuperada con éxito.",
+	"POST_NOT_FOUND": "Publicación no encontrada.",
+	"POST_UPDATED_SUCCESSFULLY": "Su publicación ha sido actualizada con éxito.",
+	"POST_DELETED_SUCCESSFULLY": "Su publicación ha sido eliminada con éxito.",
+	"FORBIDDEN_ACCESS": "No tiene permiso para acceder o modificar esta publicación.",
+	"COMMENTS_FETCHED_SUCCESSFULLY": "Comentarios recuperados con éxito.",
+	"COMMENT_UPDATED_SUCCESSFULLY": "Su comentario ha sido actualizado con éxito.",
+	"COMMENT_ADDED_SUCCESSFULLY": "Su comentario ha sido añadido con éxito.",
+	"COMMENT_DELETED_SUCCESSFULLY": "Su comentario ha sido eliminado con éxito.",
+	"COMMENT_NOT_FOUND": "Comentario no encontrado.",
+	"FRIEND_REQUEST_ALREADY_EXISTS": "Ya son amigos con este usuario.",
+	"FRIEND_REQUEST_SENT_SUCCESSFULLY": "Solicitud de amistad enviada con éxito.",
+	"FRIENDS_FETCHED_SUCCESSFULLY": "Lista de amigos recuperada con éxito.",
+	"POST_LIKED_SUCCESSFULLY": "Le gustó la publicación con éxito.",
+	"COMMENT_LIKED_SUCCESSFULLY": "Le gustó el comentario con éxito.",
+	"USER_TAGGED_SUCCESSFULLY": "Usuario etiquetado con éxito.",
+	"INVALID_POST_ID": "El ID de publicación proporcionado es inválido.",
+	"OWNER_NOT_FOUND": "El propietario de la publicación no fue encontrado.",
+	"USER_PROFILE_FETCHED_SUCCESSFULLY": "Perfil del usuario recuperado con éxito.",
+	"FRIEND_REQUEST_NOT_FOUND": "Solicitud de amistad no encontrada.",
+	"FRIEND_REQUEST_ACCEPTED_SUCCESSFULLY": "Solicitud de amistad aceptada con éxito.",
+	"CHAT_ROOM_CREATED_SUCCESSFULLY": "Sala de chat creada con éxito.",
+	"MESSAGE_SENT_SUCCESSFULLY": "Su mensaje ha sido enviado con éxito.",
+	"MESSAGES_RETRIEVED_SUCCESSFULLY": "Mensajes recuperados con éxito.",
+	"CONTENT_UPLOAD_FAILED": "No se pudo cargar el contenido. Por favor, inténtelo de nuevo.",
+	"NOTIFICATION_SETTING_UPDATED": "Configuraciones de notificaciones actualizadas con éxito."
 }
